# carekobot

./: .env  .env.dev.example  .env.prod.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  requirements.txt
docker/uv/: Dockerfile
src/carekobot/: config.py  database.py  main.py
src/carekobot/cogs/: __init__.py  events_cog.py  miscellaneous_cog.py  tts_cog.py  voice_channel_cog.py
src/carekobot/models/: guild_config.py
src/carekobot/repositories/: guild_config_repository.py
src/carekobot/services/: events_service.py  miscellaneous_service.py  tts_service.py  voice_channel_service.py
src/carekobot/tasks/: tts_task.py
src/carekobot/utils/: tts_utils.py
